[MAZE-45] Courses (#13)
Co-authored-by: Ewa-M <92916895+Ewa-M@users.noreply.github.com>
Co-authored-by: Miklewska <emiklewska@gmail.com>